ppx_view/test/errors/invalid_int_lit.ml
let f x =
  match%view x with
  | 1z -> ()
