ppx_view/test/errors/invalid_int_lit.expected
File "invalid_int_lit.ml", line 3, characters 4-6:
Error: ppx_view: Unsupported int litteral suffix 'z'
